# Less19-Bv213

./: CMakeLists.txt  Less19-Bv213.sln
Less19-Bv213/: Department.cpp  Department.h  Employee.cpp  Employee.h  Less19-Bv213.cpp  Less19-Bv213.vcxproj  Less19-Bv213.vcxproj.filters  Outstaff.cpp  Outstaff.h  Staff.cpp  Staff.h
